# smart_lessons

./: .env.sample  .env_docker.sample  Dockerfile  README.md  celerybeat-schedule.db  docker-compose.yaml  payment_data.json  pyproject.toml
config/: celery.py  settings.py  urls.py
main/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
main/management/commands/: fill_payments.py
users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
